<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_favorite_contractors"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_favorite_contractors" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_support" />
        <item
            android:id="@+id/nav_register_as_contractor"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_register_as_contractor" />

    </group>
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_login" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_logout" />


    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
