<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.firstcode.meyar.presentation.fragments.SupportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_contact_info"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/app_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/ic_telephone" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/txt_phone"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/app_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="0599 977080"
            android:textColor="@color/gray_text_color"
            android:textSize="@dimen/app_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_mail" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/txt_mail"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/app_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="diaa.skaik@gmail.com"
            android:textColor="@color/gray_text_color"
            android:textSize="@dimen/app_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/txt_leave_message"
            android:textColor="@color/white"
            android:textSize="@dimen/app_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/new_account_form_image_width"
                    android:layout_height="@dimen/new_account_form_image_height"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_mail" />

                <EditText
                    android:id="@+id/user_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/new_account_edit_text_margin_right"
                    android:hint="@string/txt_ur_mail"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColorHint="@color/color_form_hint"
                    android:textSize="@dimen/app_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/new_account_form_image_width"
                    android:layout_height="@dimen/new_account_form_image_height"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_mail" />

                <EditText
                    android:id="@+id/user_message_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/new_account_edit_text_margin_right"
                    android:gravity="top"
                    android:hint="@string/txt_message_content"
                    android:lines="2"
                    android:maxLines="2"
                    android:textColorHint="@color/color_form_hint"
                    android:textSize="@dimen/app_text_size" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/send_message_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/action_send_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/app_text_size" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
