<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_background"
    android:orientation="vertical"
    tools:context="app.firstcode.meyar.presentation.activities.LoginActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/new_account_form_image_width"
                android:layout_height="@dimen/new_account_form_image_height"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_mail"
                android:tint="@color/white" />

            <EditText
                android:id="@+id/user_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/new_account_edit_text_margin_right"
                android:backgroundTint="@color/white"
                android:hint="@string/txt_mail"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/new_account_form_image_width"
                android:layout_height="@dimen/new_account_form_image_height"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_lock"
                android:tint="@color/white" />

            <EditText
                android:id="@+id/user_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/new_account_edit_text_margin_right"
                android:backgroundTint="@color/white"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/action_sgin_in"
            android:textColor="@color/colorPrimaryText" />

        <LinearLayout
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/txt_forget_password"
                android:textAlignment="center"
                android:textColor="@color/gray_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/action_recover_passwod"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
