<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.firstcode.meyar.presentation.activities.ForgetPasswordActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/circle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_lock"
            android:tint="@color/white" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/new_account_form_image_width"
                android:layout_height="@dimen/new_account_form_image_height"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_lock"
                android:tint="@color/gray_tint_color" />

            <EditText
                android:id="@+id/enter_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/new_account_edit_text_margin_right"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColorHint="@color/color_form_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/new_account_form_image_width"
                android:layout_height="@dimen/new_account_form_image_height"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_lock"
                android:tint="@color/gray_tint_color" />

            <EditText
                android:id="@+id/re_enter_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/new_account_edit_text_margin_right"
                android:hint="@string/txt_re_enter_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColorHint="@color/color_form_hint" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/action_save"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
